# space-scene

./: .ghci  .gitignore  Makefile  README.md  SpaceScene.cabal  SpaceScene.hs
src/objects/: Cube.hs  Fighter.hs  Grid.hs  Pyramid.hs  Sphere.hs  Star.hs  StarCluster.hs  Station.hs  Sun.hs
src/scene/: SpaceScene.hs
src/utils/: GLUtils.hs
