name:              SpaceScene
Build-Type:        Simple
cabal-version:     >= 1.2
version:           0.1
author:            Adam Cardenas
maintainer:        cevaris@gmail.com
category:          Graphics

extra-source-files:  readme.md

executable SpaceScene
    hs-source-dirs:  src
                     src/objects
                     src/scene
                     src/utils
    main-is:         SpaceScene.hs
    build-depends:   base,
                     GLUT,
                     OpenGLRaw,
                     split